# sailing_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  package.json  readme.md  shader_loader.cpp
build_emscripten/: sailing_simulator.wasm
build_emscripten/shader/: shader.frag  shader.vert
build_emscripten/src/: asset.hpp
engine/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader_loader.cpp  shader_loader.h  texture.cpp  texture.h  window.cpp  window.h
lib/: mesh.cpp  mesh.h  window.cpp  window.h
shader/: fragment.glsl  shader.frag  shader.vert  vertex.glsl
src/: asset.hpp  camera.cpp  camera.h  goal.cpp  goal.h  index.html  main.cpp  mast.cpp  mast.h  obstacle.cpp  obstacle.h  renderer.cpp  renderer.h  shader_loader.h  simulater.cpp  simulater.h  vane.cpp  vane.h  yacht.cpp  yacht.h
textures/: land.jpeg:Zone.Identifier
web/: package-lock.json  package.json
web/pages/: index.tsx
web/public/: sailing_simulator.js  sailing_simulator.wasm
